--- a/OTServerCanary/data/npclib/npc_lua.mdx
+++ b/OTServerCanary/data/npclib/npc_lua.mdx
@@ -4,11 +4,6 @@ description: "Documentação técnica de npc.lua"
 icon: "file-code"
 ---
 
-<img
-  style={{ borderRadius:"0.5rem" }}
-  src="/images/hero-dark.png"
-/>
-
 ## 🛠️ Informações do Arquivo
 
 Este arquivo estende a classe `Npc` (do motor C++) com funções auxiliares escritas em Lua. Ele também define funções globais críticas para o reconhecimento de texto (como `MsgContains`), que são usadas para detectar se um jogador disse uma palavra-chave específica.
@@ -116,12 +111,41 @@ end
 
 Extrai o primeiro número encontrado em uma string.
 
+```lua
+function GetCount(string)
+	local b, e = string:find("%d+")
+	return b and e and tonumber(string:sub(b, e)) or -1
+end
+```
+
 - **Uso**: Útil para saber quantidades quando o jogador diz "buy 50 potions".
 - **Retorno**: `number` (o valor encontrado) ou `-1` se não achar nada.
 
 #### `SayEvent(npcId, playerId, messageDelayed, npcHandler, textType)`
 
 A função de callback executada quando um NPC fala com atraso (delay).
+
+```lua
+function SayEvent(npcId, playerId, messageDelayed, npcHandler, textType)
+	local npc = Npc(npcId)
+	if not npc then
+		return logger.error("[{} NpcHandler:say] - Npc parameter for npc '{}' is missing, nil or not found", npc:getName(), npc:getName())
+	end
+
+	local player = Player(playerId)
+	if not player then
+		return logger.error("[{} NpcHandler:say] - Player parameter for npc '{}' is missing, nil or not found", npc:getName(), npc:getName())
+	end
+
+	local parseInfo = {
+		[TAG_PLAYERNAME] = player:getName(),
+		[TAG_TIME] = getFormattedWorldTime(),
+		[TAG_BLESSCOST] = Blessings.getBlessingCost(player:getLevel(), false, (npc:getName() == "Kais" or npc:getName() == "Nomad") and true),
+		[TAG_PVPBLESSCOST] = Blessings.getPvpBlessingCost(player:getLevel(), false),
+	}
+	npc:say(npcHandler:parseMessage(messageDelayed, parseInfo), textType or TALKTYPE_PRIVATE_NP, false, player, npc:getPosition())
+end
+```
 
 - **Propósito**: Processar tags dinâmicas na mensagem antes de enviá-la.
 - **Tags Processadas**:
@@ -141,9 +165,19 @@ Estas funções estendem a metatabela `Npc`, permitindo chamadas como `npc:funca
 
 Envia uma ou mais mensagens para um jogador específico.
 
-<Frame>
-  ![Image](/images/image-2.png)
-</Frame>
+```lua
+-- Npc talk
+-- npc:talk({text, text2}) or npc:talk(text)
+function Npc:talk(player, text)
+	if type(text) == "table" then
+		for i = 0, #text do
+			self:sendMessage(player, text[i])
+		end
+	else
+		self:sendMessage(player, text)
+	end
+end
+```
 
 - **Parâmetros**:
   - `player`: Objeto Player.
@@ -154,15 +188,26 @@ Envia uma ou mais mensagens para um jogador específico.
 
 Envia uma mensagem privada (NPC Channel) formatando o nome do jogador.
 
-<Frame>
-  ![Image](/images/image.png)
-</Frame>
+```lua
+-- Npc send message to player
+-- npc:sendMessage(text)
+function Npc:sendMessage(player, text)
+	return self:say(string.format(text or "", player:getName()), TALKTYPE_PRIVATE_NP, true, player)
+end
+```
 
 - **Lógica**: Usa `string.format` para injetar o nome do jogador caso o texto contenha `%s`. Define o tipo de fala como `TALKTYPE_PRIVATE_NP`.
 
 #### `Npc:sayWithDelay(npcId, text, messageType, delay, eventDelay, player)`
 
 Agenda uma fala do NPC para o futuro.
+
+```lua
+function Npc:sayWithDelay(npcId, text, messageType, delay, eventDelay, player)
+	eventDelay.done = false
+	eventDelay.event = addEvent(sayFunction, delay < 1 and 1000 or delay, npcId, text, messageType, eventDelay, player)
+end
+```
 
 - **Parâmetros**:
   - `eventDelay`: Uma tabela que armazena o ID do evento (para poder cancelar se o jogador andar).
@@ -193,6 +238,20 @@ end
 #### `sayFunction(npcId, text, type, eventDelay, playerId)`
 
 Callback simples usado pelo `Npc:sayWithDelay`.
+
+```lua
+-- Function called with by the function "Npc:sayWithDelay"
+local sayFunction = function(npcId, text, type, eventDelay, playerId)
+	local npc = Npc(npcId)
+	if not npc then
+		logger.error("[sayFunction] - Npc not is valid")
+		return false
+	end
+
+	npc:say(text, type, false, playerId, npc:getPosition())
+	eventDelay.done = true
+end
+```
 
 - **Propósito**: Executar a fala agendada e marcar o evento como concluído (`eventDelay.done = true`).
 
